polish first 3 weeks

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,7 +6,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2B3467;
+  --ifm-color-primary: #146C94;
   --ifm-color-primary-dark: #2B3467;
   --ifm-color-primary-darker: #2B3467;
   --ifm-color-primary-darkest: #2B3467;
